edit:  Instagram Account

--- a/Testimonials.html
+++ b/Testimonials.html
@@ -40,7 +40,7 @@
           </li>
           <li>
             <a
-              href="https://instagram.com/the_valli_girils?igshid=NTc4MTIwNjQ2YQ=="
+              href="https://instagram.com/the_valli_girls?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"
               class="icon brands fa-instagram"
               target="_blank"
               ><span class="label">Instagram</span></a
@@ -71,11 +71,11 @@
           </header>
           <h1 style="text-align: center;font-size: 3em;">Testimonials</h1>
           <p style="font-family:'Times New Roman', Times, serif">
-            Welcome to the Testimonials Page of Valli Girls. Explore real-life stories of satisfied customers who
+            Welcome to the Testimonials Page of The Valli Girls. Explore real-life stories of satisfied customers who
             have experienced the quality and excellence of our products. Gain
             confidence in our commitment to customer satisfaction and let their
             words assure you of our exceptional service. Join our community of
-            happy customers and taste the Valli Girls difference today!
+            happy customers and taste The Valli Girls difference today!
           </p>
           <hr>
           <h3 style="text-align: center;">Here are some reviews from our Customers</h3>
@@ -179,7 +179,7 @@
                       <p>
                         "I buy meat from here whenever I'm in the area. I always
                         stock up on the chicken strips for salads. But the best
-                        thing is the water buffalo burger with panceta and
+                        thing is the water buffalo burger with pancetta and
                         sautéed onion! Friends and relatives always ask me to
                         bring those back - they love them! High quality meats
                         and amazing service, the staff are friendly and
@@ -303,7 +303,7 @@
               </li>
               <li>
                 <a
-                  href="https://instagram.com/the_valli_girils?igshid=NTc4MTIwNjQ2YQ=="
+                  href="https://instagram.com/the_valli_girls?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"
                   class="icon brands alt fa-instagram"
                   target="_blank"
                   ><span class="label">Instagram</span></a
