--- a/aboutUs.html
+++ b/aboutUs.html
@@ -40,7 +40,7 @@
           </li>
           <li>
             <a
-              href="https://instagram.com/the_valli_girils?igshid=NTc4MTIwNjQ2YQ=="
+              href="https://instagram.com/the_valli_girls?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"
               class="icon brands fa-instagram"
               target="_blank"
               ><span class="label">Instagram</span></a
@@ -173,7 +173,7 @@
               </li>
               <li>
                 <a
-                  href="https://instagram.com/the_valli_girils?igshid=NTc4MTIwNjQ2YQ=="
+                  href="https://instagram.com/the_valli_girls?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"
                   class="icon brands alt fa-instagram"
                   target="_blank"
                   ><span class="label">Instagram</span></a
