--- a/whatWeOffer.html
+++ b/whatWeOffer.html
@@ -40,7 +40,7 @@
           </li>
           <li>
             <a
-              href="https://instagram.com/the_valli_girils?igshid=NTc4MTIwNjQ2YQ=="
+              href="https://instagram.com/the_valli_girls?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"
               class="icon brands fa-instagram"
               target="_blank"
               ><span class="label">Instagram</span></a
@@ -88,7 +88,7 @@
             <li>100% antibiotic free, through their whole life cycle.</li>
             <li>
               Birds are fed a custom,non -medicated feed with flax and no animal
-              bu-products.
+              by-products.
             </li>
             <li>
               Chicken are processed on the farm with no cages and long distance
@@ -96,7 +96,7 @@
             </li>
             <li>
               Chicken are processed on Wednesday,using the water chilled
-              sysytem,delivered to us on on Thursday.
+              system,delivered to us on on Thursday.
             </li>
             <li>
               Upon arrival to the shop,whole chicken are broken down into pieces
@@ -104,7 +104,7 @@
             </li>
             <li>
               Also available, liver and other organs, chicken feet and bones for
-              soup or broth (chickenbox).
+              soup or broth (chicken box).
             </li>
 		</ul>
           </p>
@@ -123,13 +123,13 @@
 					100% Grass-fed and Grass finished.
 				</li>
 				<li>
-					Famer grown chemical free diet of grasses, clover and legumes.
+					Farmer grown chemical free diet of grasses, clover and legumes.
 				</li>
 				<li>
 					Traditionally raised in a closed cow-calf herd. All cattle are born & raised on the farm.
 				</li>
 				<li>
-					Abbattoir shares neighbouring land,limiting stress to the animals for processing.
+					Abattoir shares neighboring land,limiting stress to the animals for processing.
 				</li>
 				<li>
 					Beef is dry aged for 21 days before being delivered to our shop for sale.
@@ -177,7 +177,7 @@
             <li>
 				Raised by the Snyder family in Breslau, ON (near Waterloo).
             </li>
-            <li>Farmer raised GMO free feed with added vitamins, minerals and probiotics.</li>
+            <li>Farmer raised GMO free feed with added vitamins, minerals and pro biotics.</li>
             <li>
 				100% antibiotic free.
             </li>
@@ -193,7 +193,6 @@
 		  <!-- menu -->
 		  <h1>Our MEnu</h1>
 			<!-- Table -->
-									<h3>Our prices</h3>
 									<div class="table-wrapper">
 										<table class="alt">
 											<thead>
@@ -205,14 +204,14 @@
 											</thead>
 											<tbody>
 												<tr>
-													<td>Turkey, Meatball & Quinoi</td>
+													<td>Turkey, Meatball & Quinoa</td>
 													<td>Beef & Water Buffalo</td>
 													<td>Bacon & Cheddar Quiche</td>
 													
 												</tr>
 												<tr>
 													<td>Chicken Noodles</td>
-													<td>Caramalized Onion</td>
+													<td>Caramelized Onion</td>
 													<td>Mushroom Quiche</td>
 												</tr>
 												<tr>
@@ -269,7 +268,7 @@
 													<td>Garlic Pork</td>
 												</tr>
 												<tr>
-													<td>Lemon Taragon</td>
+													<td>Lemon Tarragon</td>
 													<td>Mild Italian Pork</td>
 												</tr>
 												<tr>
@@ -438,7 +437,7 @@
 										</table>
 									</div>
 									<hr />
-									<p>We also provide other Exotic Meats and Deli's which include Frog Legs,Goose, Guinea hen,Quail, pheasant,Squab,Butter, Chease, Jams and many more! </p>
+									<p>We also provide other Exotic Meats and Deli's which include Frog Legs,Goose,Guinea hen,Quail, pheasant,Squab,Butter, Cheese, Jams and many more! </p>
 									<p style="text-align: center;font-size: 1.5em;font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">Visit us and experience the quality!</p>
         </section>
       </div>
@@ -462,7 +461,7 @@
           <section class="alt">
             <h3>Address</h3>
             <p>
-              318 Ontario St, St. Catharines,<br />
+              318 Ontario St, St. Catharine's,<br />
               ON L2R 5L8, Canada
             </p>
           </section>
@@ -496,7 +495,7 @@
               </li>
               <li>
                 <a
-                  href="https://instagram.com/the_valli_girils?igshid=NTc4MTIwNjQ2YQ=="
+                  href="https://instagram.com/the_valli_girls?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"
                   class="icon brands alt fa-instagram"
                   target="_blank"
                   ><span class="label">Instagram</span></a
