--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </li>
           <li>
             <a
-              href="https://instagram.com/the_valli_girils?igshid=NTc4MTIwNjQ2YQ=="
+              href="https://instagram.com/the_valli_girls?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"
               class="icon brands fa-instagram"
               target="_blank"
               ><span class="label">Instagram</span></a
@@ -257,7 +257,7 @@
               </li>
               <li>
                 <a
-                  href="https://instagram.com/the_valli_girils?igshid=NTc4MTIwNjQ2YQ=="
+                  href="https://instagram.com/the_valli_girls?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"
                   class="icon brands alt fa-instagram"
                   target="_blank"
                   ><span class="label">Instagram</span></a
