--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               diet.
             </p>
           </header>
-          <a class="image main"><img src="images/meat3.webp" alt="" /></a>
+          <a class="image main"><img src="images/butcher1.jpg" alt="" /></a>
         </article>
         <section class="offer">
           <h1>What we offer</h1>
@@ -184,7 +184,7 @@
                 >
               </h2>
             </header>
-            <a class="image fit"><img src="images/butcher1.jpg" alt="" /></a>
+            <a class="image fit"><img src="images/meat3.webp" alt="" /></a>
             <p>
               Explore from wide varieties of all the exotic meats we sell. Find
               the best you deserve!.
