--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 >
               </h2>
             </header>
-            <a class="image fit"><img src="images/meat3.webp" alt="" /></a>
+            <a class="image fit"><img src="images/meat1.jpg" alt="" /></a>
             <p>
               Explore from wide varieties of all the exotic meats we sell. Find
               the best you deserve!.
